update after lexer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,12 @@ if(MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
 endif(MSVC)
 
-file(GLOB CLI_FILE "cli/*")
+file(GLOB CLI_FILE "cli/*_cli.*")
 file(GLOB AST_FILE "AST/*")
 
 include_directories(${C0_SOURCE_DIR})
 
-add_executable(C0 Lexer.cpp Lex.cpp Parser.cpp util.cpp Type.cpp ${CLI_FILE} ${AST_FILE} StackTable.h)
+
+add_executable(Lexer Lexer.cpp Lex.cpp util.cpp cli/lexer.cpp)
+
+add_executable(C0 cli/C0.cpp Lexer.cpp Lex.cpp Parser.cpp util.cpp Type.cpp ${CLI_FILE} ${AST_FILE} StackTable.h)
