--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ file(GLOB CLI_FILE "cli/*_cli.*")
 file(GLOB AST_FILE "AST/*")
 file(GLOB QUAD_FILE "Quad/*")
 file(GLOB SSA_FILE "SSA/*")
+file(GLOB ASM_FILE "Asm/*")
+file(GLOB NAIVE_GEN_FILE "NaiveGen/*")
 
 include_directories(${C0_SOURCE_DIR})
 
@@ -24,3 +26,6 @@ add_executable(SSA cli/ssa.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp Sy
 add_executable(Grammar Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp ${AST_FILE} SymTable.cpp cli/grammar.cpp AST/ExprAST.cpp TypeChecker.cpp TypeChecker.h)
 
 add_executable(C0 cli/C0.cpp Lexer.cpp Lex.cpp Parser.cpp util.cpp Type.cpp ${CLI_FILE} ${AST_FILE}  SymTable.h SymTable.cpp AST/FuncAST.h Quad/BasicBlock.cpp Quad/BasicBlock.h Quad/Quads.cpp Quad/Quads.h Quad/CFGDrawer.cpp Quad/CFGDrawer.h Quad/CFGConverter.cpp Quad/CFGConverter.h AST/ExprAST.cpp TypeChecker.cpp TypeChecker.h SSA/Value.h SSA/Control.h)
+
+add_executable(QuadGen cli/quadGen.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp ${AST_FILE} ${QUAD_FILE} ${ASM_FILE} ${NAIVE_GEN_FILE} TypeChecker.cpp TypeChecker.h NaiveGen/frameBuilder.cpp NaiveGen/frameBuilder.h)
+
