basic finish naive gen

--- a/launch.vs.json
+++ b/launch.vs.json
@@ -28,7 +28,7 @@
       "name": "quadGen",
       "project": "CMakeLists.txt",
       "projectTarget": "QuadGen.exe",
-      "args": [ "TestSource/fact.c0" ],
+      "args": [ "TestSource/factWithPrint.c0" ],
       "type": "default"
     }
 
