--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ file(GLOB QUAD_FILE "Quad/*")
 file(GLOB ASM_FILE "Asm/*")
 file(GLOB NAIVE_GEN_FILE "NaiveGen/*")
 file(GLOB SON_FILE "SON/*")
+file(GLOB ASM_MODULE "ASM/*")
 
 include_directories(${C0_SOURCE_DIR})
 
@@ -24,9 +25,7 @@ add_executable(Quad cli/quad.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp 
 
 add_executable(Grammar Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp ${AST_FILE} SymTable.cpp cli/grammar.cpp AST/ExprAST.cpp TypeChecker.cpp TypeChecker.h)
 
-add_executable(C0 cli/C0.cpp Lexer.cpp Lex.cpp Parser.cpp util.cpp Type.cpp ${CLI_FILE} ${AST_FILE}  SymTable.h SymTable.cpp AST/FuncAST.h Quad/BasicBlock.cpp Quad/BasicBlock.h Quad/Quads.cpp Quad/Quads.h Quad/CFGDrawer.cpp Quad/CFGDrawer.h Quad/CFGConverter.cpp Quad/CFGConverter.h AST/ExprAST.cpp TypeChecker.cpp TypeChecker.h SSA/Value.h SSA/Control.h cli/quadGen.cpp SON/Node.h SON/SON.h cli/seaOfNode.cpp SON/ConstN.h SON/MiscN.h)
-
 add_executable(QuadGen cli/quadGen.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp ${AST_FILE} ${QUAD_FILE} ${ASM_FILE} ${NAIVE_GEN_FILE} TypeChecker.cpp)
 
-add_executable(SON cli/seaOfNode.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp TypeChecker.cpp ${SON_FILE} ${AST_FILE} SON/BackDFSWalker.cpp SON/BackDFSWalker.h SON/PhiClean.h SON/PhiClean.cpp SON/sonUtil.h SON/sonUtil.cpp SON/SCCP.h SON/SCCP.cpp SON/ConstN.cpp)
+add_executable(SON cli/seaOfNode.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp TypeChecker.cpp ${SON_FILE} ${AST_FILE} ${ASM_MODULE} SON/Payload.h SON/ArithN.cpp SON/MiscN.cpp SON/ProjN.h)
 
