--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ file(GLOB QUAD_FILE "Quad/*")
 file(GLOB ASM_FILE "Asm/*")
 file(GLOB NAIVE_GEN_FILE "NaiveGen/*")
 file(GLOB SON_FILE "SON/*")
-file(GLOB ASM_MODULE "ASM/*")
+file(GLOB ARCH_FILE "Arch/*")
 
 include_directories(${C0_SOURCE_DIR})
 
@@ -27,5 +27,5 @@ add_executable(Grammar Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp ${AST_FILE
 
 add_executable(QuadGen cli/quadGen.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp ${AST_FILE} ${QUAD_FILE} ${ASM_FILE} ${NAIVE_GEN_FILE} TypeChecker.cpp Pos.h SourceStream.cpp SourceStream.h)
 
-add_executable(SON cli/seaOfNode.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp TypeChecker.cpp ${SON_FILE} ${AST_FILE} ${ASM_MODULE} Pos.h SourceStream.cpp SourceStream.h)
+add_executable(SON cli/seaOfNode.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp TypeChecker.cpp ${SON_FILE} ${AST_FILE} ${Arch_FILE} Pos.h SourceStream.cpp SourceStream.h)
 
