--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,5 +27,6 @@ add_executable(Grammar Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp ${AST_FILE
 
 add_executable(QuadGen cli/quadGen.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp ${AST_FILE} ${QUAD_FILE} ${ASM_FILE} ${NAIVE_GEN_FILE} TypeChecker.cpp Pos.h SourceStream.cpp SourceStream.h)
 
-add_executable(SON cli/seaOfNode.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp TypeChecker.cpp ${SON_FILE} ${AST_FILE} ${Arch_FILE} Pos.h SourceStream.cpp SourceStream.h SON/FineDrawer.cpp SON/FineDrawer.h SON/LSect.cpp SON/LSect.h)
+add_executable(SON cli/seaOfNode.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp TypeChecker.cpp ${SON_FILE} ${AST_FILE} ${ARCH_FILE} Pos.h SourceStream.cpp SourceStream.h SON/FineDrawer.cpp SON/FineDrawer.h SON/LSect.cpp SON/LSect.h SON/liveness.h SON/IRGraph.cpp SON/IRGraph.h SON/CodeGen.cpp SON/CodeGen.h)
+add_executable(IR cli/irdump.cpp Lexer.cpp Lex.cpp util.cpp Type.cpp Parser.cpp SymTable.cpp TypeChecker.cpp ${SON_FILE} ${AST_FILE} ${ARCH_FILE} Pos.h SourceStream.cpp SourceStream.h SON/FineDrawer.cpp SON/FineDrawer.h SON/LSect.cpp SON/LSect.h SON/liveness.h SON/IRGraph.cpp SON/IRGraph.h SON/CodeGen.cpp SON/CodeGen.h)
 
